--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.8"
+
 services:
   drive:
     container_name: drive
@@ -61,3 +62,19 @@ services:
     tty: true        # docker run -t
     depends_on:
       - "drive"
+  plex:
+    image: ghcr.io/linuxserver/plex:latest
+    container_name: plex
+    environment:
+      #- PUID=${PUID:-1000}
+      #- PGID=${PGID:-1000}
+      - VERSION=docker
+      - PLEX_CLAIM=${PLEX_CLAIM}
+    volumes:
+      - /data/config/plex:/config
+      - /data/media:/data
+    ports:
+      - "32400:32400"
+    restart: unless-stopped
+    depends_on:
+      - "media"
